deployments/homepage/homepage/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
